--- a/che-core-git-server/pom.xml
+++ b/che-core-git-server/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.4</version>
+        <version>3.13.4.2-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-git-server</artifactId>
