--- a/ide/che-core-ide-generators/pom.xml
+++ b/ide/che-core-ide-generators/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-ide-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.4.2-SNAPSHOT</version>
+        <version>3.13.4.2</version>
     </parent>
     <artifactId>che-core-ide-generators</artifactId>
     <packaging>jar</packaging>
