--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.4.2-SNAPSHOT</version>
+        <version>3.13.4.2</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-api-parent</artifactId>
