--- a/platform-api-client-gwt/pom.xml
+++ b/platform-api-client-gwt/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.13.4.3-SNAPSHOT</version>
+        <version>3.13.4.3</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-client-gwt-parent</artifactId>
