--- a/platform-api/che-core-api-vfs/pom.xml
+++ b/platform-api/che-core-api-vfs/pom.xml
@@ -125,6 +125,11 @@
             <artifactId>everrest-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <resources>
