IDEX-3650: Fix behavior of ExtServerStateController
in the case of importing projects using factory 4.0 we had situations when
ImportProjectNotificationSubscriberImpl had been subscribed before ExtServerStateEvent was fired

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -132,9 +132,9 @@ importLocalProject.openZipTitle = Select Zip archive to import:
 importProject.importButton = Import
 importProject.uriFieldTitle = URL:
 importProject.viewTitle = Import project
-importProject.importing = Importing project...
-importProject.message.success = Project successfully imported.
-importProject.message.failure = Project import failed.
+importProject.importing = Importing {0} project...
+importProject.message.success = Project {0} successfully imported.
+importProject.message.failure = Project {0} import failed.
 importProject.message.startWithWhiteSpace = The url can not start with a whitespace.
 importProject.message.urlInvalid = The URL provided for the project to import is invalid.
 importProject.message.unableGetSshKey = Unable get private ssh key. \
