IDEX-3661: Ask to add to index whed adding or deleting items

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -61,6 +61,9 @@ action.paste.text=Paste
 action.paste.description=Paste from clipboard
 
 deleteDialogTitle=Delete
+deleteAddToIndexDialogTitle = Add deletion to Git index
+deleteAddToIndexDialogText = Would you like to add deletion to Git index?
+deleteAddToIndexDialogNotification = Deletion successfully added to Git index
 deleteFilesAndSubdirectoriesInTheSelectedDirectory=</br>All files and subdirectories in the selected directory(s) will be deleted.</br>You might not be able to fully undo this operation!
 deleteAllFilesAndSubdirectories=</br>All files and subdirectories in "{0}" will be deleted.</br>You might not be able to fully undo this operation!
 
@@ -151,6 +154,9 @@ action.newFolder.title = Folder
 action.newFolder.description = Creates new folder
 action.newFile.title = File
 action.newFile.description = Creates new file
+action.newFile.add.to.index.title = Add file to Git index
+action.newFile.add.to.index.text = Would you like to add file \"{0}\" to Git index?
+action.newFile.add.to.index.notification = File \"{0}\" added to Git index
 action.newXmlFile.title = XML File
 action.newXmlFile.description = Creates new XML file
 action.expandEditor.title=Expand/Collapse Editor
