--- a/ide/che-core-ide-app/pom.xml
+++ b/ide/che-core-ide-app/pom.xml
@@ -337,6 +337,7 @@
                 <configuration>
                     <dtoPackages>
                         <package>org.eclipse.che.ide.statepersistance.dto</package>
+                        <package>org.eclipse.che.ide.debug.dto</package>
                     </dtoPackages>
                     <outputDirectory>${dto-generator-out-directory}</outputDirectory>
                     <genClassName>org.eclipse.che.ide.statepersistance.dto.DtoClientImpls</genClassName>
