--- a/platform-api/che-core-api-workspace/pom.xml
+++ b/platform-api/che-core-api-workspace/pom.xml
@@ -50,6 +50,10 @@
             <artifactId>javax.inject</artifactId>
         </dependency>
         <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
         </dependency>
