--- a/platform-api/che-core-api-workspace/pom.xml
+++ b/platform-api/che-core-api-workspace/pom.xml
@@ -52,6 +52,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>javax.validation</groupId>
