--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -191,6 +191,7 @@ messages.startingOperation=Starting {0}
 ############### Buttons ###############################
 ok = OK
 cancel = Cancel
+search = Search
 open = Open
 next = Next
 back = Back
@@ -260,3 +261,12 @@ project.explorer.projects.load.failed=Failed to load projects list.
 project.explorer.detected.unconfigured.project=Detected non-valid project which should be configured.
 project.explorer.extension.server.stopped=Extension server stopped. Project explorer will be truncated.
 project.explorer.part.tooltip=This View helps you to do basic operation with your projects.
+
+############### full-text-search###################
+action.full.text.search=Find
+action.full.text.search.description=Find in path
+text.search.content.label=Text to find:
+text.search.title=Find Text
+text.search.file.mask=File mask:
+text.search.directory=Root directory:
+select.path.window.title=Select Path
