Proposal to add context menu to editor tabs
Context menu contains:

Close action - closes current selected editor.
Close All action - closes all opened editors.
Close All but Pinned action - closes all editors that don't have pin.
Close Other action - closes all editors but leaves current selected.
Reopen Closed Tab action - reopens last closed editor.
Pin/Unpin Editor Tab - mark/unmark current selected tab with pin.

Screencast: https://slack-files.com/T02G3VAG4-F0H1D6P47-d3213511d4

Squashed commit of the following:

commit 018b01109f42cf164e15bfb8aea4b115791daddd
Merge: ed0b0db c5f5a59
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Mon Dec 21 10:42:41 2015 +0200

    Merge remote-tracking branch 'origin/master' into EditorContextMenuInitial

commit ed0b0dbb94fcabfc65521cf873a7a658beda8c39
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Mon Dec 21 10:32:55 2015 +0200

    Apply formatter

commit 4842963b4ccbc1f9d468b4c071c9dcf8f0e8009d
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Mon Dec 21 10:32:01 2015 +0200

    Apply formatter

commit 516bdbf3e750b5b7a44bf87577a0b1a74dcab130
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Sun Dec 20 02:19:39 2015 +0200

    Make "But" capitalized

commit 39496cfcde62aa02c3a861653b1bb0d15b62ee50
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Sun Dec 20 01:49:34 2015 +0200

    Proposal to add context menu to editor tabs

    Context menu contains:

    1. Close action - closes current selected editor.
    2. Close All action - closes all opened editors.
    3. Close All but Pinned action - closes all editors that doesn't have pin.
    4. Close Other action - closes all editors but leave current selected.
    5. Reopen Closed Tab action - reopens last closed editor.
    6. Pin/Unpin Editor Tab - mark/unmark current selected tab with pin.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -270,3 +270,17 @@ text.search.title=Find Text
 text.search.file.mask=File mask:
 text.search.directory=Root directory:
 select.path.window.title=Select Path
+
+############# Editor tab context menu #############
+editor.tab.context.menu.close=Close
+editor.tab.context.menu.close.description=Close current editor
+editor.tab.context.menu.close.all=Close All
+editor.tab.context.menu.close.all.description=Close all editors
+editor.tab.context.menu.close.all.but.pinned=Close All But Pinned
+editor.tab.context.menu.close.all.but.pinned.description=Close all editors but leave pinned
+editor.tab.context.menu.close.all.except.selected=Close Other
+editor.tab.context.menu.close.all.except.selected.description=Close all editors but leave current selected
+editor.tab.context.menu.pin=Pin/Unpin Tab
+editor.tab.context.menu.pin.description=Pin/Unpin current editor tab
+editor.tab.context.menu.reopen.closed.tab=Reopen Closed Tab
+editor.tab.context.menu.reopen.closed.tab.description=Reopen last closed editor tab
