Proposal to add recent files functionality
New dialog will display list of recently opened files (file name and path).
Double clicking on file will open editor.
User may call this dialog by hotkey Ctrl+E (Linux/Windows) or Command+E (Mac)

Also new menu item: Edit->Recent.
Will contains the same list. Also user can clear recent list by menu item Edit->Recent->Clear Recent List

Screencast: https://slack-files.com/T02G3VAG4-F0H2V70HX-a2d294fdf9

Squashed commit of the following:

commit 51a85555ee3688b4c3d961ef68541c1c0cf4481f
Merge: b887db3 38320b5
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Mon Dec 21 11:02:57 2015 +0200

    Merge branch 'master' into RecentFilesInitial

    Conflicts:
    	ide/che-core-ide-app/src/main/java/org/eclipse/che/ide/CoreLocalizationConstant.java
    	ide/che-core-ide-app/src/main/java/org/eclipse/che/ide/core/StandardComponentInitializer.java
    	ide/che-core-ide-app/src/main/java/org/eclipse/che/ide/core/inject/CoreGinModule.java
    	ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties

commit b887db3cb4f5cde4e3fbe40a1c3649fe9943a38b
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Mon Dec 21 10:48:32 2015 +0200

    Apply new name

commit 5b13e2164a0c2de0a9086d7b2ef9264e05acd64f
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Sun Dec 20 23:43:26 2015 +0200

    Move to Edit menu

commit 0af215eff7081986f2b000bd884541bd9c6d5deb
Author: Vladyslav Zhukovskii <vzhukovskii@codenvy.com>
Date:   Sun Dec 20 22:49:25 2015 +0200

    Proposal to add recent files functionality

    New dialog will display list of recently opened files (file name and path).
    Double clicking on file will open editor.

    Also new menu item: File->Recent.
    Will contains the same list. Also user can clear recent list by menu item File->Recent->Clear Recent List

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -271,6 +271,13 @@ text.search.file.mask=File mask:
 text.search.directory=Root directory:
 select.path.window.title=Select Path
 
+############# Recent Files #############
+open.recent.file.title=Open Recent File
+open.recent.file.description=Open recent file
+open.recent.files.title=Recent Files
+open.recent.file.clear.title=Clear List
+open.recent.file.clear.description=Clear recent list
+
 ############# Editor tab context menu #############
 editor.tab.context.menu.close=Close
 editor.tab.context.menu.close.description=Close current editor
