IDEX-3790 Improve the menu structure

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -94,11 +94,11 @@ switch.to.right.editor.action = Previous editor
 switch.to.right.editor.action.description = Switch to right editor tab
 
 ############# List HotKeys ##########
-hot.keys.action.name=HotKeys
-hot.keys.action.description=List HotKeys for IDE and editor
-hot.keys.dialog.title=Actions
-hot.keys.table.action.description.title=Action
-hot.keys.table.item.title=Hot Key
+hot.keys.action.name = List HotKeys
+hot.keys.action.description = List HotKeys for IDE and editor
+hot.keys.dialog.title = Actions
+hot.keys.table.action.description.title = Action
+hot.keys.table.item.title = Hot Key
 
 ############### Redo ###############################
 redo.name = Redo
@@ -107,28 +107,30 @@ redo.description = Redo the last undone document action.
 ############### Upload File ###############################
 uploadFile.name = Upload File...
 uploadFile.description = Upload new file
-uploadFile.title = File upload
+uploadFile.title = Upload File
 uploadFile.overwrite = overwrite if file exists
 cancelButton = Cancel
 uploadButton = Upload
 openFileFieldTitle = File to open
 
 ############### Upload Folder from Zip ###############################
-uploadFolderFromZip.name = Upload Folder From Zip...
-uploadFolderFromZip.description = Upload folder from zip
+uploadFolderFromZip.name = Upload Folder...
+uploadFolderFromZip.description = Upload zip containing folder
+uploadZipFolder.title = Upload Folder
 uploadFolderFromZip.overwrite = overwrite if folder exists
-uploadFolderFromZip.openZipFieldTitle = Zip to open
+uploadFolderFromZip.openZipFieldTitle = Zip containing folder
 uploadFolderFromZip.skipFirstLevel = Skip the root folder of the archive
 
 ############### Download Zip ###############################
-downloadZip.project.name = Download ZIP...
+downloadZip.project.name = Download as Zip...
 downloadZip.project.description = Download the whole project as a zip archive.
 download.item.name = Download...
 download.item.description = Download selected item.
 
 ############### Import Project ###############################
-importProjectFromLocation.name = Import From Location...
+importProjectFromLocation.name = Import Project...
 importProjectFromLocation.description = Import project from location
+
 importLocalProject.name = Import Local Project...
 importLocalProject.description = Import project from local zip
 importLocalProject.openZipTitle = Select Zip archive to import:
@@ -160,8 +162,10 @@ action.newFile.add.to.index.notification = File \"{0}\" added to Git index
 action.newXmlFile.title = XML File
 action.newXmlFile.description = Creates new XML file
 action.expandEditor.title=Expand/Collapse Editor
+
+action.projectConfiguration.title = Configuration...
 action.projectConfiguration.description = Project Configuration...
-action.projectConfiguration.title = Change project type
+
 action.findAction.description=Find Action
 action.findAction.title=Find Action by name
 action.showHiddenFiles.title = Show/Hide Hidden Files
