IDEX-3876: Change the titles and messages of all Che notifications

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -63,7 +63,9 @@ action.paste.description=Paste from clipboard
 deleteDialogTitle=Delete
 deleteAddToIndexDialogTitle = Add deletion to Git index
 deleteAddToIndexDialogText = Would you like to add deletion to Git index?
-deleteAddToIndexDialogNotification = Deletion successfully added to Git index
+deleteAddToIndexIndexFailedToUpdate = Failed to update git index
+deleteAddToIndexIndexUpdated = Git index updated
+deleteAddToIndexDialogNotification = Deletion successfully added to git index.
 deleteFilesAndSubdirectoriesInTheSelectedDirectory=</br>All files and subdirectories in the selected directory(s) will be deleted.</br>You might not be able to fully undo this operation!
 deleteAllFilesAndSubdirectories=</br>All files and subdirectories in "{0}" will be deleted.</br>You might not be able to fully undo this operation!
 
@@ -137,9 +139,9 @@ importLocalProject.openZipTitle = Select Zip archive to import:
 importProject.importButton = Import
 importProject.uriFieldTitle = URL:
 importProject.viewTitle = Import project
-importProject.importing = Importing {0} project...
-importProject.message.success = Project {0} successfully imported.
-importProject.message.failure = Project {0} import failed.
+importProject.importing = Importing project(s)
+importProject.message.success = Project {0} imported
+importProject.message.failure = Failed to import project {0}
 importProject.message.startWithWhiteSpace = The url can not start with a whitespace.
 importProject.message.urlInvalid = The URL provided for the project to import is invalid.
 importProject.message.unableGetSshKey = Unable get private ssh key. \
@@ -158,7 +160,7 @@ action.newFile.title = File
 action.newFile.description = Creates new file
 action.newFile.add.to.index.title = Add file to Git index
 action.newFile.add.to.index.text = Would you like to add file \"{0}\" to Git index?
-action.newFile.add.to.index.notification = File \"{0}\" added to Git index
+action.newFile.add.to.index.notification = File \"{0}\" added to Git index.
 action.newXmlFile.title = XML File
 action.newXmlFile.description = Creates new XML file
 action.expandEditor.title=Expand/Collapse Editor
@@ -171,6 +173,8 @@ action.findAction.title=Find Action by name
 action.showHiddenFiles.title = Show/Hide Hidden Files
 action.showHiddenFiles.description = Show/Hide Hidden Files
 action.completions.title = Content Assist
+action.git.index.updated=Git index updated
+action.git.index.update.failed=Failed to update git index
 
 ############### NewResource ###############################
 newResource.title = New {0}
@@ -179,8 +183,7 @@ newResource.invalidName = Name is invalid
 
 ############### Messages ###############################
 messages.changesMayBeLost = You have unsaved files, that may be lost!
-messages.allFilesSaved = All files saved successfully
-messages.someFilesCanNotBeSaved = Some files can not be saved
+messages.someFilesCanNotBeSaved = Failed to save all files
 messages.saveChanges = {0} has been modified. Save changes?
 messages.promptSaveChanges = Some data has been modified. Save changes?
 messages.unableOpenResource = Unable to open {0}.
@@ -221,8 +224,9 @@ stop.ws.description=Stop current workspace
 ############## Create workspace's snapshot action ##########
 create.snapshot.title=Create Snapshot
 create.snapshot.description=Creates snapshot of workspace
-create.snapshot.progress=Creating snapshot...
-create.snapshot.success=Snapshot successfully created
+create.snapshot.progress=Snapshotting the workspace
+create.snapshot.success=Snapshot created
+create.snapshot.failed=Failed to snapshot the workspace
 
 ############## Get workspace #############
 get.ws.error.dialog.title=Error
@@ -250,20 +254,23 @@ start.ws.title=Start Workspace
 start.ws.button=Start
 start.ws.select.to.start=Workspace to start:
 placeholder.select.ws.to.start=Click to select workspace to start
-started.ws=Started workspace {0} ...
-ext.server.started=Extension server started...
-ext.server.stopped=Extension server stopped...
-workspace.start.failed=Workspace {0} starting is failed.
-workspace.config.undefined=Workspace config is not defined
+started.ws=Workspace is running
+ext.server.started=Workspace agent started
+ext.server.stopped=Workspace agent stopped
+workspace.start.failed=Failed to start workspace
+failed.to.load.factory=Failed to load factory
+workspace.config.undefined=Workspace config is not defined.
 start.ws.error.title=Start Workspace Error
 start.ws.error.content=Workspace {0} failed to start. The reason: {1}. Try restarting it, start existing workspace or create a new one.
 
 ############# Project Explorer ##########
-project.explorer.project.configuration.failed=Project configuration was failed.
+project.explorer.project.configuration.failed=Failed to configure project {0}
 project.explorer.project.update.failed=Project update was failed.
-project.explorer.projects.load.failed=Failed to load projects list.
-project.explorer.detected.unconfigured.project=Detected non-valid project which should be configured.
-project.explorer.extension.server.stopped=Extension server stopped. Project explorer will be truncated.
+project.explorer.projects.load.failed=Failed to load projects list
+project.explorer.invalid.project.detected=Invalid project(s) detected
+project.explorer.detected.unconfigured.project=Some project(s) are not properly configured.
+project.explorer.extension.server.stopped=Workspace agent stopped
+project.explorer.extension.server.stopped.description=Project explorer is not synchronized anymore.
 project.explorer.part.tooltip=This View helps you to do basic operation with your projects.
 
 ############### full-text-search###################
@@ -295,3 +302,10 @@ editor.tab.context.menu.pin=Pin/Unpin Tab
 editor.tab.context.menu.pin.description=Pin/Unpin current editor tab
 editor.tab.context.menu.reopen.closed.tab=Reopen Closed Tab
 editor.tab.context.menu.reopen.closed.tab.description=Reopen last closed editor tab
+
+failed.to.copy.items=Failed to copy item(s)
+failed.to.move.items=Failed to move item(s)
+failed.to.update.project=Failed to update project {0}
+failed.to.import.project=Failed to import project
+failed.to.upload.files=Failed to upload file(s)
+failed.to.upload.files.from.zip=Failed to upload file(s) from zip
