--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -95,10 +95,10 @@ switch.to.left.editor.action.description = Switch to left editor tab
 switch.to.right.editor.action = Previous editor
 switch.to.right.editor.action.description = Switch to right editor tab
 
-############# List HotKeys ##########
-hot.keys.action.name = List HotKeys
-hot.keys.action.description = List HotKeys for IDE and editor
-hot.keys.dialog.title = Actions
+############# Key Bindings ##########
+key.bindings.action.name=Key Bindings
+key.bindings.action.description=Key Bindings for IDE and editor
+key.bindings.dialog.title=Key Bindings
 hot.keys.table.action.description.title = Action
 hot.keys.table.item.title = Hot Key
 
