--- a/platform-api/che-core-api-core/src/main/resources/content-types.properties
+++ b/platform-api/che-core-api-core/src/main/resources/content-types.properties
@@ -148,6 +148,7 @@ spl=application/x-futuresplash
 src=application/x-wais-source
 sv4cpio=application/x-sv4cpio
 sv4crc=application/x-sv4crc
+svg=image/svg+xml
 swf=application/x-shockwave-flash
 t=application/x-troff
 tar=application/x-tar
