--- a/commons/che-core-maven-plugin/pom.xml
+++ b/commons/che-core-maven-plugin/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.14.0-SNAPSHOT</version>
+        <version>3.14.0</version>
     </parent>
     <artifactId>che-core-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
