IDEX-3783 Refinement in Console panel UI

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -218,7 +218,7 @@ askWindow.close.title = Close
 project.settings.title=Settings
 
 ############## Stop workspace action ##########
-stop.ws.title=Stop Workspace
+stop.ws.title=Stop
 stop.ws.description=Stop current workspace
 
 ############## Create workspace's snapshot action ##########
