Set version 3.14.0-sap-03
Change-Id: I1cd49fcec88fbb50e2d521757ab32fa650e72a90

--- a/ide/pom.xml
+++ b/ide/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>3.14.0</version>
+        <version>3.14.0-sap-03</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>che-core-ide-parent</artifactId>
