--- a/ide/che-core-ide-api/pom.xml
+++ b/ide/che-core-ide-api/pom.xml
@@ -81,6 +81,12 @@
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-commons-gwt</artifactId>
         </dependency>
+        <!--
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-model</artifactId>
+        </dependency>
+        -->
         <dependency>
             <groupId>com.google.gwt</groupId>
             <artifactId>gwt-user</artifactId>
