--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,9 @@
     <name>Che Core Parent</name>
     <modules>
         <module>commons</module>
+        <!--
+        <module>model</module>
+        -->
         <module>platform-api</module>
         <module>platform-api-client-gwt</module>
         <module>ide</module>
