--- a/platform-api-client-gwt/pom.xml
+++ b/platform-api-client-gwt/pom.xml
@@ -34,5 +34,6 @@
         <module>che-core-client-gwt-vfs</module>
         <module>che-core-client-gwt-factory</module>
         <module>che-core-client-gwt-git</module>
+        <module>che-core-client-gwt-ssh</module>
     </modules>
 </project>
