--- a/che-core-git-impl-native/pom.xml
+++ b/che-core-git-impl-native/pom.xml
@@ -76,6 +76,10 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-api-ssh</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-vfs</artifactId>
         </dependency>
         <dependency>
