IDEX-1605: add a possibility to change title of the popup widget

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -279,7 +279,7 @@ action.full.text.search.description=Find in path
 text.search.content.label=Text to find:
 text.search.title=Find Text
 text.search.file.mask=File mask:
-text.search.directory=Root directory:
+text.search.directory=Search root:
 select.path.window.title=Select Path
 
 ############# Recent Files #############
