--- a/platform-api/che-core-api-ssh/pom.xml
+++ b/platform-api/che-core-api-ssh/pom.xml
@@ -172,6 +172,7 @@
             </plugin>
             <plugin>
                 <groupId>org.eclipse.che.core</groupId>
+                <version>${project.version}</version>
                 <artifactId>che-core-api-dto-maven-plugin</artifactId>
                 <executions>
                     <execution>
