--- a/platform-api/che-core-api-project/pom.xml
+++ b/platform-api/che-core-api-project/pom.xml
@@ -79,6 +79,10 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-api-machine</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-vfs</artifactId>
         </dependency>
         <dependency>
