IDEX-4001 add export workspace menu

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -157,6 +157,7 @@ import.project.error = Import project failed:
 action.newFolder.title = Folder
 action.newFolder.description = Creates new folder
 action.newFile.title = File
+action.export.text = Export
 action.newFile.description = Creates new file
 action.newFile.add.to.index.title = Add file to Git index
 action.newFile.add.to.index.text = Would you like to add file \"{0}\" to Git index?
