IDEX-3991: Synchronize workspace master and VFS

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -310,3 +310,18 @@ failed.to.update.project=Failed to update project {0}
 failed.to.import.project=Failed to import project
 failed.to.upload.files=Failed to upload file(s)
 failed.to.upload.files.from.zip=Failed to upload file(s) from zip
+
+################ Synchronize project dialog #############
+synchronize.dialog.title=Synchronize Project
+location.dialog.title=Project Location
+exist.in.workspace.dialog.content=Project {0} exists in workspace but doest not exist in file system. Do you want to import project?
+exist.in.file.system.dialog.content=Project {0} exists in file system but does not exist in workspace. Do you want to configure project?
+project.configuration.changed=Project configuration has been changed. Do you want to reconfigure project or keep project as blank?
+button.import=Import Project
+button.configure=Configure Project
+button.remove=Remove Project
+button.keep.blank=Keep Blank
+project.removed=Project {0} removed
+project.remove.error=Error during removing {0} project
+project.update.error=Error during update {0} project
+location.incorrect=Project does not have location or location is incorrect. Input correct project location:
