--- a/platform-api/che-core-api-project/pom.xml
+++ b/platform-api/che-core-api-project/pom.xml
@@ -152,6 +152,11 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-commons-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.everrest</groupId>
             <artifactId>everrest-test</artifactId>
             <scope>test</scope>
