--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -314,7 +314,7 @@ failed.to.upload.files.from.zip=Failed to upload file(s) from zip
 ################ Synchronize project dialog #############
 synchronize.dialog.title=Synchronize Project
 location.dialog.title=Project Location
-exist.in.workspace.dialog.content=Project {0} exists in workspace but doest not exist in file system. Do you want to import project?
+exist.in.workspace.dialog.content=Project {0} exists in workspace but does not exist in file system. Do you want to import project?
 exist.in.file.system.dialog.content=Project {0} exists in file system but does not exist in workspace. Do you want to configure project?
 project.configuration.changed=Project configuration has been changed. Do you want to reconfigure project or keep project as blank?
 button.import=Import Project
