--- a/platform-api-client-gwt/che-core-client-gwt-machine/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-machine/pom.xml
@@ -47,6 +47,10 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-api-model</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-client-gwt-core</artifactId>
         </dependency>
         <dependency>
