--- a/platform-api/che-core-api-infrastructure-local/pom.xml
+++ b/platform-api/che-core-api-infrastructure-local/pom.xml
@@ -65,6 +65,10 @@
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-machine</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.eclipse.che.core</groupId>
+            <artifactId>che-core-api-model</artifactId>
+        </dependency>
         <!--<dependency>
             <groupId>org.eclipse.che.core</groupId>
             <artifactId>che-core-api-factory</artifactId>
