--- a/platform-api/che-core-api-machine/pom.xml
+++ b/platform-api/che-core-api-machine/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-api-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>4.0.0-beta-8</version>
+        <version>4.0.0-beta-9-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-api-machine</artifactId>
     <packaging>jar</packaging>
