CLDIDE-2677 replace javax.ws.rs 1.1.1 with 2.0 version

--- a/platform-api/che-core-api-docs/pom.xml
+++ b/platform-api/che-core-api-docs/pom.xml
@@ -48,7 +48,8 @@
         </dependency>
         <dependency>
             <groupId>javax.ws.rs</groupId>
-            <artifactId>jsr311-api</artifactId>
+            <artifactId>javax.ws.rs-api</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
