--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -208,6 +208,7 @@ save = Save
 apply = Apply
 refresh = Refresh
 delete = Delete
+print = Print...
 
 projectProblem.title = Project requires configuration
 projectProblem.message = We cannot determine what type of project this is.<br/> Pressing 'Configure' will open the project configuration wizard.<br/> \
