IDEX-4046: Show synchronize dialog when user expand node

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -274,6 +274,8 @@ project.explorer.detected.unconfigured.project=Some project(s) are not properly 
 project.explorer.extension.server.stopped=Workspace agent stopped
 project.explorer.extension.server.stopped.description=Project explorer is not synchronized anymore.
 project.explorer.part.tooltip=This View helps you to do basic operation with your projects.
+error.configuration.title=Project Configuration Fail
+error.configuration.content=Do you want configure project as BLANK? You can re-configure it later.
 
 ############### full-text-search###################
 action.full.text.search=Find
@@ -313,6 +315,8 @@ failed.to.upload.files=Failed to upload file(s)
 failed.to.upload.files.from.zip=Failed to upload file(s) from zip
 
 ################ Synchronize project dialog #############
+project.status.title=Project Status
+project.status.content="Project {0} is not imported yet. Wait until importing finish."
 synchronize.dialog.title=Synchronize Project
 location.dialog.title=Project Location
 exist.in.workspace.dialog.content=Project {0} exists in workspace but does not exist in file system. Do you want to import project?
