--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -279,7 +279,7 @@ error.configuration.content=Do you want configure project as BLANK? You can re-c
 
 ############### full-text-search###################
 action.full.text.search=Find
-action.full.text.search.description=Find in path
+action.full.text.search.description=Find Text In Path
 text.search.content.label=Text to find:
 text.search.title=Find Text
 text.search.file.mask=File mask:
