IDEX-3812 update swagger annotation to new version of swagger

--- a/platform-api/che-core-api-analytics/pom.xml
+++ b/platform-api/che-core-api-analytics/pom.xml
@@ -34,7 +34,7 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.wordnik</groupId>
+            <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
         <dependency>
