--- a/platform-api/che-core-api-auth/pom.xml
+++ b/platform-api/che-core-api-auth/pom.xml
@@ -51,7 +51,7 @@
             <artifactId>google-oauth-client</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.wordnik</groupId>
+            <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
         <dependency>
