--- a/platform-api/che-core-api-user/pom.xml
+++ b/platform-api/che-core-api-user/pom.xml
@@ -33,7 +33,7 @@
             <artifactId>guava</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.wordnik</groupId>
+            <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
         <dependency>
