--- a/platform-api/che-core-api-account/pom.xml
+++ b/platform-api/che-core-api-account/pom.xml
@@ -29,7 +29,7 @@
             <artifactId>gson</artifactId>
         </dependency>
         <dependency>
-            <groupId>com.wordnik</groupId>
+            <groupId>io.swagger</groupId>
             <artifactId>swagger-annotations</artifactId>
         </dependency>
         <dependency>
