'Navigate to File' action should not be disabled when no project is selected

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -39,6 +39,8 @@ projectExplorer.button.title=Explorer
 projectExplorer.titleBar.text=Project Explorer
 
 ############### Navigate To File ###############
+action.navigateToFile.text = Navigate to File
+action.navigateToFile.description = Navigate to file
 navigateToFile.view.title = Navigate To File
 navigateToFile.view.file.field.title = Start enter a file name:
 navigateToFile.view.file.field.prompt = Replace one character by '?' - Replace any string by '*'
