IDEX-4127. Do not display error when new name equals current name at renaming item

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/CoreLocalizationConstant.properties
@@ -28,9 +28,9 @@ action.rename.text = Rename...
 action.rename.description = Rename selected item
 
 renameNodeDialogTitle = Rename
-renameFileDialogTitle = Rename file
-renameFolderDialogTitle = Rename folder
-renameProjectDialogTitle = Rename project
+renameFileDialogTitle = Rename file \"{0}\"
+renameFolderDialogTitle = Rename folder \"{0}\"
+renameProjectDialogTitle = Rename project \"{0}\"
 
 renameDialogNewNameLabel = New name:
 
