--- a/platform-api/che-core-api-machine/pom.xml
+++ b/platform-api/che-core-api-machine/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>guice</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-annotations</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
         </dependency>
