--- a/commons/che-core-commons-test/pom.xml
+++ b/commons/che-core-commons-test/pom.xml
@@ -16,7 +16,7 @@
     <parent>
         <artifactId>che-core-commons-parent</artifactId>
         <groupId>org.eclipse.che.core</groupId>
-        <version>4.0.0-beta-14-SNAPSHOT</version>
+        <version>4.0.0-RC1-SNAPSHOT</version>
     </parent>
     <artifactId>che-core-commons-test</artifactId>
     <packaging>jar</packaging>
