--- a/platform-api/che-core-api-dto/pom.xml
+++ b/platform-api/che-core-api-dto/pom.xml
@@ -22,6 +22,7 @@
     <packaging>jar</packaging>
     <name>Che Core :: API :: DTO</name>
     <properties>
+        <findbugs.failonerror>false</findbugs.failonerror>
         <generated.test.sources.directory>${project.build.directory}/generated-test-sources/gen</generated.test.sources.directory>
     </properties>
     <dependencies>
