--- a/platform-api-client-gwt/che-core-client-gwt-factory/pom.xml
+++ b/platform-api-client-gwt/che-core-client-gwt-factory/pom.xml
@@ -23,6 +23,7 @@
     <name>Che Core API :: Client GWT :: Factory</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
+        <findbugs.failonerror>false</findbugs.failonerror>
     </properties>
     <dependencies>
         <dependency>
