--- a/platform-api/che-core-api-account/pom.xml
+++ b/platform-api/che-core-api-account/pom.xml
@@ -22,6 +22,7 @@
     <name>Che Core :: API :: Account</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
+        <findbugs.failonerror>false</findbugs.failonerror>
     </properties>
     <dependencies>
         <dependency>
