--- a/platform-api/che-core-api-dto-maven-plugin/pom.xml
+++ b/platform-api/che-core-api-dto-maven-plugin/pom.xml
@@ -21,6 +21,9 @@
     <artifactId>che-core-api-dto-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
     <name>Che Core :: API :: DTO Maven Plugin</name>
+    <properties>
+        <findbugs.failonerror>false</findbugs.failonerror>
+    </properties>
     <dependencies>
         <dependency>
             <groupId>org.apache.maven</groupId>
