--- a/platform-api/che-core-api-machine/pom.xml
+++ b/platform-api/che-core-api-machine/pom.xml
@@ -23,6 +23,7 @@
     <name>Che Core :: API :: Machine</name>
     <properties>
         <dto-generator-out-directory>${project.build.directory}/generated-sources/dto/</dto-generator-out-directory>
+        <findbugs.failonerror>false</findbugs.failonerror>
         <!--<maven.source.version>1.7</maven.source.version>-->
         <!--<maven.target.version>1.7</maven.target.version>-->
     </properties>
