Rework in according to the new Project API

--- a/pom.xml
+++ b/pom.xml
@@ -30,7 +30,7 @@
         <module>platform-api-client-gwt</module>
         <module>ide</module>
         <!-- module>che-core-vfs-impl</module -->
-        <module>che-core-git-impl-native</module>
+        <!--<module>che-core-git-impl-native</module>-->
     </modules>
     <scm>
         <connection>scm:git:git@github.com:codenvy/che-core.git</connection>
