--- a/platform-api/pom.xml
+++ b/platform-api/pom.xml
@@ -35,7 +35,7 @@
         <module>che-core-api-machine</module>
         <module>che-core-api-analytics</module>
         <module>che-core-api-auth</module>
-        <module>che-core-api-git</module>
+        <!--<module>che-core-api-git</module>-->
         <module>che-core-api-ssh</module>
         <module>che-core-api-infrastructure-local</module>
     </modules>
