Fix missing message.properties file

--- a/che-core-git-impl-jgit/pom.xml
+++ b/che-core-git-impl-jgit/pom.xml
@@ -135,6 +135,7 @@
                 <configuration>
                     <excludes>
                         <exclude>**/*.java</exclude>
+                        <exclude>**/*.properties</exclude>
                         <exclude>pom.xml</exclude>
                     </excludes>
                 </configuration>
