CHE-1107: Implement sparce-checkout for Jgit

--- a/che-core-git-impl-jgit/pom.xml
+++ b/che-core-git-impl-jgit/pom.xml
@@ -40,6 +40,10 @@
             <artifactId>jsch</artifactId>
         </dependency>
         <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+        </dependency>
+        <dependency>
             <groupId>javax.annotation</groupId>
             <artifactId>javax.annotation-api</artifactId>
         </dependency>
